# glet

./: .gitignore  CMakeLists-scheduler-only.txt  CMakeLists.txt  README.md  install_cmake.sh  install_dependencies.sh  install_opencv_cpp.sh
docker_files/: Dockerfile  build_dockers.sh  create_docker_overlay_network.sh  run_base_docker.sh  run_interactive_backend_docker.sh  run_interactive_client_docker.sh  run_interactive_frontend_docker.sh
resource/: 1_28_28.txt  3_224_224.txt  3_300_300.txt  BackendList.json  BackendList_docker.json  ModelList.txt  config-apps.json  config.json  device-config.json  input-camera.txt  input.txt  input_config.json  mem-config.json  proxy_config.json  sched-config.json
resource/2080ti/: INT_MODEL_CONSTANT.CSV  UTIL.CSV
resource/3080/: INT_MODEL_CONSTANT.CSV  UTIL.CSV
resource/SchedConfigs/: config-gpulet-int.json  config-gpulet-noint.json  config-greedy_part.json  config-timesharing_only.json
resource/config/: bert-base-uncased.json  bert.json  densenet161.json  game.json  googlenet.json  lenet.json  lenet1.json  lenet2.json  lenet3.json  lenet4.json  lenet5.json  lenet6.json  mnasnet1_0.json  mobilenet_v2.json  resnet50.json  ssd-mobilenetv1.json  traffic.json  vgg16.json
resource/models/: lenet1.pt
resource/proxy/: startProxy.sh  startProxy_docker.sh
scripts/: analyzeInterScheduleResults.py  analyzeServerClient.py  basicAnalysis.py  basicFileAnalysis.py  build_all.sh  build_scheduler_only.sh  createMultiModelAppConfigs.py  createMultiModelScenConfigs.py  createPSTaskConfigs.py  createSchedulingCases.py  execLocal.sh  execLocal_nsight.sh  execReqGen.sh  execScheduler.sh  execScheduler_MultiModelApp.sh  execScheduler_MultiModelScen.sh  execScheduler_PeakSearch.sh  execScheduler_cases.sh  executeBackend.sh  executeBackend_docker_ver.sh  executeClient_docker_appwise.sh  executeFrontend.sh  executeFrontend_docker_ver.sh  experMultiModelApp.sh  experMultiModelScen.sh  experiment_ps.sh  parseNSight.py  profileNSight.sh  readnPrintPSSchedulingResults.py  setupServer.sh  shutdownServer.sh  shutdown_MPS.sh  start_MPS.sh
src/: backend.cpp  client.cpp  frontend.cpp  proxy.cpp  standalone_inference.cpp  standalone_scheduler.cpp
src/common/: common_utils.cpp  common_utils.h  config.cpp  config.h  custom_ops.cpp  custom_ops.h  exp_model.cpp  exp_model.h  gpu_proxy.cpp  gpu_proxy.h  gpu_utils.cpp  gpu_utils.h  img_utils.cpp  img_utils.h  jsoncpp.cpp  profile.cpp  profile.h  scheduler_utils.cpp  scheduler_utils.h  self_tuning.cpp  (+7 more)
(+56 files in other folders)
